creacion de cuadricula del juego

--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <h1>TIC TAC TOE GAME</h1>
 
     <div id="contenedor">
-
+        <div class="hijoCont">1</div>
+        <div class="hijoCont">1</div>
+        <div class="hijoCont">1</div>
+        <div class="hijoCont">1</div>
+        <div class="hijoCont">1</div>
+        <div class="hijoCont">1</div>
+        <div class="hijoCont">1</div>
+        <div class="hijoCont">1</div>
+        <div class="hijoCont">1</div>
     </div>
 
     
@@ -17,4 +26,4 @@
 
     <script src="index.js"></script>
 </body>
-</html>l
+</html>
