--- a/index.html
+++ b/index.html
@@ -3,26 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe Game</title>
+    <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>TIC TAC TOE GAME</h1>
-
-    <div id="contenedor">
-        <div class="hijoCont">1</div>
-        <div class="hijoCont">1</div>
-        <div class="hijoCont">1</div>
-        <div class="hijoCont">1</div>
-        <div class="hijoCont">1</div>
-        <div class="hijoCont">1</div>
-        <div class="hijoCont">1</div>
-        <div class="hijoCont">1</div>
-        <div class="hijoCont">1</div>
-    </div>
-
+    <h1>TIC TAC TOE</h1>
     
-
+    <div class="container">
+        <div class="cell" onclick="letra()"></div>
+        <div class="cell" onclick="letra()"></div>
+        <div class="cell" onclick="letra()"></div>
+        <div class="cell" onclick="letra()"></div>
+        <div class="cell" onclick="letra()"></div>
+        <div class="cell" onclick="letra()"></div>
+        <div class="cell" onclick="letra()"></div>
+        <div class="cell" onclick="letra()"></div>
+        <div class="cell" onclick="letra()"></div>
+    </div>
 
     <script src="index.js"></script>
 </body>
