identificacion de los cuadros

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <h1>TIC TAC TOE</h1>
     
     <div class="container">
-        <div class="cell" onclick="letra()"></div>
-        <div class="cell" onclick="letra()"></div>
-        <div class="cell" onclick="letra()"></div>
-        <div class="cell" onclick="letra()"></div>
-        <div class="cell" onclick="letra()"></div>
-        <div class="cell" onclick="letra()"></div>
-        <div class="cell" onclick="letra()"></div>
-        <div class="cell" onclick="letra()"></div>
-        <div class="cell" onclick="letra()"></div>
+        <div class="cell" id="boton1"></div>
+        <div class="cell" id="boton2"></div>
+        <div class="cell" id="boton3"></div>
+        <div class="cell" id="boton4"></div>
+        <div class="cell" id="boton5"></div>
+        <div class="cell" id="boton6"></div>
+        <div class="cell" id="boton7"></div>
+        <div class="cell" id="boton8"></div>
+        <div class="cell" id="boton9"></div>
     </div>
 
     <script src="index.js"></script>
