cambio de alertas a texto en una p

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="cell" id="boton8"></div>
         <div class="cell" id="boton9"></div>
     </div>
+    <p id="message"></p>
 
     <script src="index.js"></script>
 </body>
