inicio de los estilos

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="index.css">
-</head>
-<body>
-    <h1>TIC TAC TOE</h1>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap"><body>
+    <h1 class="aggressive">TIC TAC TOE</h1>
     
     <div class="container">
         <div class="cell" id="boton1"></div>
@@ -21,6 +20,10 @@
         <div class="cell" id="boton9"></div>
     </div>
     <p id="message"></p>
+
+    <video autoplay muted loop class="videoFondo">
+        <source src="video/the-final-battle-elden-ring-moewalls-com.mp4" type="video/mp4">
+    </video>
 
     <script src="index.js"></script>
 </body>
