progreso de estilos

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="cell" id="boton8"></div>
         <div class="cell" id="boton9"></div>
     </div>
+    <button>Volver a Jugar</button>
     <p id="message"></p>
 
     <video autoplay muted loop class="videoFondo">
