modo facil completado

--- a/facil.html
+++ b/facil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/facil.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap"><body>
     <h1 class="aggressive">TIC TAC TOE</h1>
     
@@ -35,10 +35,10 @@
     <p id="message"></p>
 
     <video autoplay muted loop class="videoFondo">
-        <source src="video/the-final-battle-elden-ring-moewalls-com.mp4" type="video/mp4">
+        <source src="video/castle-on-the-sky-moewalls-com.mp4" type="video/mp4">
     </video>
 
 
-    <script src="js/index.js"></script>
+    <script src="js/facil.js"></script>
 </body>
 </html>
