--- a/normal.html
+++ b/normal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/normal.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap"><body>
     <h1 class="aggressive">TIC TAC TOE</h1>
     
@@ -39,6 +39,6 @@
     </video>
 
 
-    <script src="js/index.js"></script>
+    <script src="js/normal.js"></script>
 </body>
 </html>
