--- a/facil.html
+++ b/facil.html
@@ -38,6 +38,10 @@
         <source src="video/castle-on-the-sky-moewalls-com.mp4" type="video/mp4">
     </video>
 
+    <audio id="musica"autoplay loop>
+      <source src="audio/ytmp3free.cc_musica-de-fondo-sin-copyright-youtubemp3free.org.mp3">
+    </audio>
+
 
     <script src="js/facil.js"></script>
 </body>
