--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         <source src="video/the-final-battle-elden-ring-moewalls-com.mp4" type="video/mp4">
     </video>
 
+    <audio id="musica"autoplay loop>
+      <source src="audio/ytmp3free.cc_terraria-calamity-mod-music-scourge-of-the-universe-theme-of-devourer-of-gods-youtubemp3free.org.mp3">
+    </audio>
+
 
     <script src="js/index.js"></script>
 </body>
