--- a/normal.html
+++ b/normal.html
@@ -38,6 +38,9 @@
         <source src="video/warriors-tomb-moewalls-com.mp4" type="video/mp4">
     </video>
 
+    <audio id="musica"autoplay loop>
+      <source src="audio/ytmp3free.cc_musica-suave-sin-copyright-49-instrumental-y-chill-youtubemp3free.org.mp3">
+    </audio>
 
     <script src="js/normal.js"></script>
 </body>
