implementacion de turnos

--- a/normal.html
+++ b/normal.html
@@ -17,7 +17,11 @@
           <a href="facil.html">Facil</a>
         </div>
     </div>
-      <p id="message"></p>
+
+
+
+      <div id="turno"><p id="message"></p></div>
+
     <div class="container">
         <div class="cell" id="boton1"></div>
         <div class="cell" id="boton2"></div>
