comienzo del contador de victorias

--- a/normal.html
+++ b/normal.html
@@ -21,6 +21,13 @@
 
 
       <div id="turno"><p id="message"></p></div>
+      
+      <div id="contadores">
+        <p id="victoriasX">Victorias X: 0</p>
+        <p id="victoriasO">Victorias O: 0</p>
+        <p id="empates">Empates: 0</p>
+    </div>
+    
 
     <div class="container">
         <div class="cell" id="boton1"></div>
