inicio de contador de victorias

--- a/normal.html
+++ b/normal.html
@@ -18,15 +18,15 @@
         </div>
     </div>
 
-
+    <div id="contadores">
+      <p id="victoriasX"></p>
+      <p id="victoriasO"></p>
+      <p id="empates"></p>
+  </div>
+  
 
       <div id="turno"><p id="message"></p></div>
       
-      <div id="contadores">
-        <p id="victoriasX">Victorias X: 0</p>
-        <p id="victoriasO">Victorias O: 0</p>
-        <p id="empates">Empates: 0</p>
-    </div>
     
 
     <div class="container">
